[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus3d"
version = "0.0.1"
authors = [
    { name = "Florian Dobener" },
]
description = "Convert NXtransformation matrices inside a nexus file to 3D file formats"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "h5py>=3.8.0",
    "numpy",
    "pint",
    "numpy-stl",
    "click",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pylint",
    "pycodestyle",
    "pytest",
    "pytest-cov",
    "scipy",
]

[project.scripts]
nexus3d = "nexus3d.nexus_transformations:cli"