[build-system]
requires = ["setuptools>=64.0.1", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus3d"
dynamic = ["version"]
authors = [
    { name = "Florian Dobener", email = "florian.dobener@physik.hu-berlin.de" },
]
description = "Convert NXtransformation matrices inside a nexus file to 3D file formats"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "h5py>=3.8.0",
    "numpy",
    "pint",
    "numpy-stl",
    "click",
    "pygltflib",
]

[project.urls]
homepage = "https://github.com/domna/nexus3d"
repository = "https://github.com/domna/nexus3d"
tracker = "https://github.com/domna/nexus3d/issues"
download = "https://github.com/domna/nexus3d/releases"

[project.optional-dependencies]
dev = [
    "mypy",
    "pylint",
    "pycodestyle",
    "pytest",
    "pytest-cov",
    "scipy",
]

[project.scripts]
nexus3d = "nexus3d.nexus_transformations:cli"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"